--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
         <service
             android:name=".LockAccessibilityTileService"
             android:exported="true"
-            android:icon="@mipmap/ic_launcher_round"
+            android:icon="@mipmap/ic_launcher_tile"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
