--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             ensure that only the system can interact with the receiver (no application can be
             granted this permission). This prevents other applications from abusing your device
             admin app.
-        -->
+        - - >
         <receiver
             android:name=".MainReceiver"
             android:label="@string/receiver_name"
@@ -41,16 +41,31 @@
                 android:name="android.app.device_admin"
                 android:resource="@xml/force_lock_policy" />
             <intent-filter>
-                <!--
+                <!- -
                     This is the primary action that a DeviceAdminReceiver subclass must handle to be
                     allowed to manage a device. This is set to the receiver when the user enables
                     the device admin app. Your code typically handles this in onEnabled(). To be
                     supported, the receiver must also require the BIND_DEVICE_ADMIN permission so
                     that other applications cannot abuse it.
-                -->
+                - - >
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
             </intent-filter>
         </receiver>
+        -->
+        <receiver
+            android:name=".LockAppWidgetProvider"
+            android:exported="true"
+            android:icon="@drawable/ic_launcher_tile"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_lock" />
+        </receiver>
+
         <service
             android:name=".LockAccessibilityService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
